# yowodraft

./: .gitignore  REVISION_PLAN.md  evaluate.py  evaluate_ava_fixed.py  evaluate_videomae.py  evaluate_videomae_8frame.py  fix_checkpoint_nan.py  main.py  measure_model_stats.py  measure_simple_adapter_comparison.py  pyproject.toml  train_ablation_r1q4.py  train_ablation_r1q5.py  train_ablation_r1q6.py  train_videomae_stable.py  train_videomae_stable_freeze.py  train_videomae_true_8frame.py  visualize.py
YOWOFormer/: __init__.py
YOWOFormer/config/cf2/: ava_config.yaml
YOWOFormer/cus_datasets/: __init__.py  build_dataset.py
YOWOFormer/cus_datasets/ava/: __init__.py  load_data.py
YOWOFormer/cus_datasets/jhmdb/: load_data.py
YOWOFormer/cus_datasets/rwf200/: create_frame.py
YOWOFormer/cus_datasets/ucf/: __init__.py  load_data.py  transforms.py
YOWOFormer/cus_datasets/ucf_crime/: load_data.py
YOWOFormer/evaluator/: README.md  ava_evaluator.py  ava_evaluator_fixed.py
YOWOFormer/evaluator/ava_official/: README.md
YOWOFormer/model/TSN/: YOWOFormer.py
YOWOFormer/model/backbone2D/: YOLOv11.py  build_backbone2D.py
YOWOFormer/model/backbone3D/: build_backbone3D.py  videomae.py  videomae_8frame.py  videomae_advanced.py
YOWOFormer/model/fusion/: CrossAttention.py  CrossAttentionParallel.py  CrossAttentionV2.py  build_fusion.py
YOWOFormer/scripts/: train.py  verify_datasets.py
YOWOFormer/utils/: build_config.py  collate.py  flops.py  loss.py
config/: simple_train_config.yaml  yolo11n_mae_token_simple.yaml  yolov11_config.yaml
(+1 files in other folders)
