[project]
name = "yowoformer-prd-own"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "einops>=0.8.1",
    "fvcore>=0.1.5.post20221221",
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "onnx>=1.19.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.0",
    "segment-anything>=1.0",
    "segmentation-models-pytorch>=0.5.0",
    "supervision>=0.26.0",
    "thop>=0.1.1.post2209072238",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "ultralytics>=8.3.197",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' " },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

